<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dh.agus.digitalhousemusic.View.LoginActivity.LoginActivity"
    android:background="@color/colorPrimaryDark">

    <include layout="@layout/toolbar"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textViewLoginMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="15dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_login_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="@android:color/white">

        <EditText
            android:id="@+id/editText_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_login_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="@android:color/white">

        <EditText
            android:id="@+id/editText_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_ingresar"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:onClick="login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="o"
        android:textSize="15sp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/textView_login_createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_crear_cuenta"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/textView_login_forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_olvide_contraseña"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>
