<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.dh.agus.digitalhousemusic.View.LoginActivity.RecoverPasswordActivity">

    <include layout="@layout/toolbar"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recover_message"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="15dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_recover_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="@android:color/white">

        <EditText
            android:id="@+id/editText_recover_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/recover_send_email"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_model"
        android:onClick="recover"/>

</LinearLayout>
